// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DiscoveryHistory /> tests should match snapshot 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main PageBody--pageBody"
    data-name="page-body"
    data-testid="page-body"
  >
    <div
      class="StyledProps--font StyledProps--main"
      style="display: flex; height: 100vh;"
    >
      <div
        class="Layout--vertical StyledProps--main"
        style="width: 30%;"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between"
          style="padding: 10px 30px;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-card-title"
          >
            discovery.discoveryDetails.tabTitles.history
          </p>
          <div>
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-repeat StyledProps--main"
                icon="repeat"
              >
                <svg
                  data-icon="repeat"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    repeat
                  </desc>
                  <path
                    d="M10 5c0 .55.45 1 1 1h4c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1s-1 .45-1 1v1.74A7.95 7.95 0 008 0C3.58 0 0 3.58 0 8c0 4.06 3.02 7.4 6.94 7.92.02 0 .04.01.06.01.33.04.66.07 1 .07 4.42 0 8-3.58 8-8 0-.55-.45-1-1-1s-1 .45-1 1c0 3.31-2.69 6-6 6-.71 0-1.37-.15-2-.38v.01C3.67 12.81 2 10.61 2 8c0-3.31 2.69-6 6-6 1.77 0 3.36.78 4.46 2H11c-.55 0-1 .45-1 1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="main-sort"
              >
                <svg
                  height="16"
                  viewBox="0 0 18 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M17.125 11.415l-3.713 3.427a.618.618 0 01-.825 0l-3.712-3.427a.51.51 0 010-.761.618.618 0 01.825 0l2.717 2.508V1.538c0-.297.26-.538.583-.538.322 0 .583.241.583.538v11.624l2.717-2.508a.618.618 0 01.825 0 .51.51 0 010 .761zM.875 4.584l3.713-3.426a.618.618 0 01.824 0l3.713 3.426a.51.51 0 010 .762.618.618 0 01-.825 0L5.583 2.838v11.623c0 .298-.26.539-.583.539-.322 0-.583-.241-.583-.539V2.838L1.7 5.346a.618.618 0 01-.825 0 .51.51 0 010-.762z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          class="selectableCard"
        >
          <div
            class="bp3-card bp3-interactive bp3-elevation-0 Card--card Card--selected Card--interactive"
            data-index="0"
            tabindex="0"
          >
            <div
              class="Layout--vertical StyledProps--main StyledProps--padding-left-small"
            >
              <p
                class="StyledProps--font StyledProps--main StyledProps--font-variation-body2"
                style="font-weight: 500;"
              >
                Jun 21, 01:17 PM
              </p>
              <div
                class="StyledProps--font StyledProps--main StyledProps--background-grey100"
                style="padding: 2px 6px; border-radius: 4px;"
              >
                <p
                  class="StyledProps--font StyledProps--main StyledProps--font-size-xsmall StyledProps--color StyledProps--color-grey800"
                  style="font-weight: 600;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--vertical StyledProps--main"
        style="width: 70%;"
      >
        <div
          class="StyledProps--font StyledProps--main StyledProps--background-black"
          style="overflow-y: scroll; width: 100%; height: 100%;"
        >
          <div
            class="bp3-tabs Tabs--main Tabs--horizontal"
          >
            <div
              class="bp3-tab-list"
              role="tablist"
            >
              <div
                class="bp3-tab-indicator-wrapper"
                style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
              >
                <div
                  class="bp3-tab-indicator"
                />
              </div>
              <div
                aria-controls="bp3-tab-panel_DiscoveredHistoryTab_cluster"
                aria-disabled="false"
                aria-expanded="true"
                aria-selected="true"
                class="bp3-tab"
                data-tab-id="cluster"
                id="bp3-tab-title_DiscoveredHistoryTab_cluster"
                role="tab"
                tabindex="0"
              >
                common.cluster
              </div>
              <div
                aria-controls="bp3-tab-panel_DiscoveredHistoryTab_node"
                aria-disabled="false"
                aria-expanded="false"
                aria-selected="false"
                class="bp3-tab"
                data-tab-id="node"
                id="bp3-tab-title_DiscoveredHistoryTab_node"
                role="tab"
                tabindex="0"
              >
                ce.perspectives.workloadDetails.fieldNames.node
              </div>
            </div>
            <div
              aria-hidden="false"
              aria-labelledby="bp3-tab-title_DiscoveredHistoryTab_cluster"
              class="bp3-tab-panel"
              id="bp3-tab-panel_DiscoveredHistoryTab_cluster"
              role="tabpanel"
            >
              <div
                class="logViewer logContainer"
                style="--char-size: 2ch;"
              >
                <pre>
                  <div
                    class="line"
                  >
                    <span
                      class="lineNumber"
                    >
                      1
                    </span>
                    <span
                      class="logLine"
                    >
                      <span
                        class=""
                      />
                    </span>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DiscoveryHistory /> tests should render error view correctly 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main PageBody--pageBody"
    data-name="page-body"
    data-testid="page-body"
  >
    <div
      class="StyledProps--font StyledProps--main"
      style="display: flex; height: 100vh;"
    >
      <div
        class="Layout--vertical StyledProps--main"
        style="width: 30%;"
      >
        <div
          class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-justifyContent-space-between"
          style="padding: 10px 30px;"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-card-title"
          >
            discovery.discoveryDetails.tabTitles.history
          </p>
          <div>
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
              type="button"
            >
              <span
                class="bp3-icon bp3-icon-repeat StyledProps--main"
                icon="repeat"
              >
                <svg
                  data-icon="repeat"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    repeat
                  </desc>
                  <path
                    d="M10 5c0 .55.45 1 1 1h4c.55 0 1-.45 1-1V1c0-.55-.45-1-1-1s-1 .45-1 1v1.74A7.95 7.95 0 008 0C3.58 0 0 3.58 0 8c0 4.06 3.02 7.4 6.94 7.92.02 0 .04.01.06.01.33.04.66.07 1 .07 4.42 0 8-3.58 8-8 0-.55-.45-1-1-1s-1 .45-1 1c0 3.31-2.69 6-6 6-.71 0-1.37-.15-2-.38v.01C3.67 12.81 2 10.61 2 8c0-3.31 2.69-6 6-6 1.77 0 3.36.78 4.46 2H11c-.55 0-1 .45-1 1z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
            <button
              class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main Button--with-current-color Button--iconOnly Button--without-shadow Button--withLeftIcon"
              type="button"
            >
              <span
                class="bp3-icon StyledProps--main"
                data-icon="main-sort"
              >
                <svg
                  height="16"
                  viewBox="0 0 18 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    clip-rule="evenodd"
                    d="M17.125 11.415l-3.713 3.427a.618.618 0 01-.825 0l-3.712-3.427a.51.51 0 010-.761.618.618 0 01.825 0l2.717 2.508V1.538c0-.297.26-.538.583-.538.322 0 .583.241.583.538v11.624l2.717-2.508a.618.618 0 01.825 0 .51.51 0 010 .761zM.875 4.584l3.713-3.426a.618.618 0 01.824 0l3.713 3.426a.51.51 0 010 .762.618.618 0 01-.825 0L5.583 2.838v11.623c0 .298-.26.539-.583.539-.322 0-.583-.241-.583-.539V2.838L1.7 5.346a.618.618 0 01-.825 0 .51.51 0 010-.762z"
                    fill="currentColor"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </button>
          </div>
        </div>
        <div
          class="selectableCard"
        />
      </div>
      <div
        class="Layout--vertical StyledProps--main"
        style="width: 70%;"
      >
        <div
          class="StyledProps--font StyledProps--main StyledProps--background-black"
          style="overflow-y: scroll; width: 100%; height: 100%;"
        >
          <div
            class="bp3-tabs Tabs--main Tabs--horizontal"
          >
            <div
              class="bp3-tab-list"
              role="tablist"
            >
              <div
                class="bp3-tab-indicator-wrapper"
                style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
              >
                <div
                  class="bp3-tab-indicator"
                />
              </div>
              <div
                aria-controls="bp3-tab-panel_DiscoveredHistoryTab_cluster"
                aria-disabled="false"
                aria-expanded="true"
                aria-selected="true"
                class="bp3-tab"
                data-tab-id="cluster"
                id="bp3-tab-title_DiscoveredHistoryTab_cluster"
                role="tab"
                tabindex="0"
              >
                common.cluster
              </div>
              <div
                aria-controls="bp3-tab-panel_DiscoveredHistoryTab_node"
                aria-disabled="false"
                aria-expanded="false"
                aria-selected="false"
                class="bp3-tab"
                data-tab-id="node"
                id="bp3-tab-title_DiscoveredHistoryTab_node"
                role="tab"
                tabindex="0"
              >
                ce.perspectives.workloadDetails.fieldNames.node
              </div>
            </div>
            <div
              aria-hidden="false"
              aria-labelledby="bp3-tab-title_DiscoveredHistoryTab_cluster"
              class="bp3-tab-panel"
              id="bp3-tab-panel_DiscoveredHistoryTab_cluster"
              role="tabpanel"
            >
              <div
                class="logViewer logContainer"
                style="--char-size: 2ch;"
              >
                <pre>
                  <div
                    class="line"
                  >
                    <span
                      class="lineNumber"
                    >
                      1
                    </span>
                    <span
                      class="logLine"
                    >
                      <span
                        class=""
                      />
                    </span>
                  </div>
                </pre>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<DiscoveryHistory /> tests should render loading view correctly 1`] = `
<div>
  <div
    class="StyledProps--font StyledProps--main PageBody--pageBody"
    data-name="page-body"
    data-testid="page-body"
  >
    <div
      class="StyledProps--font StyledProps--main PageSpinner--spinner StyledProps--flex StyledProps--flex-align-center-center"
      data-testid="page-spinner"
    >
      <div
        class="Layout--vertical Layout--layout-spacing-medium StyledProps--main PageSpinner--content"
        style="align-items: center; width: 500px;"
      >
        <span
          class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-grey600"
          data-icon="steps-spinner"
        >
          <svg
            height="32"
            viewBox="0 0 128 128"
            width="32"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M122.5 69.25H96.47a33.1 33.1 0 000-10.5h26.05a5.25 5.25 0 010 10.5z"
                fill="#ff8e02"
              />
              <path
                d="M112.04 97.83L89.47 84.8a33.1 33.1 0 005.25-9.1l22.57 13.03a5.25 5.25 0 01-5.28 9.1zM88.68 117.35L75.65 94.78a33.1 33.1 0 009.1-5.25l13.02 22.57a5.25 5.25 0 11-9.1 5.25zM58.7 122.57V96.5a33.1 33.1 0 0010.5 0v26.07a5.25 5.25 0 01-10.5 0zM30.1 112.1l13.04-22.57a33.1 33.1 0 009.1 5.25L39.2 117.35a5.25 5.25 0 11-9.1-5.25zM10.6 88.74L33.16 75.7a33.1 33.1 0 005.25 9.1L15.88 97.83a5.25 5.25 0 11-5.25-9.1z"
                fill="#ffddb3"
                fill-opacity="0.3"
              />
              <path
                d="M5.37 58.75h26.06a33.1 33.1 0 000 10.5H5.37a5.25 5.25 0 010-10.5z"
                fill="#ffd29a"
                fill-opacity="0.4"
              />
              <path
                d="M15.85 30.17L38.4 43.2a33.1 33.1 0 00-5.24 9.1L10.6 39.25a5.25 5.25 0 115.25-9.1z"
                fill="#ffc680"
                fill-opacity="0.5"
              />
              <path
                d="M39.2 10.65l13.03 22.57a33.1 33.1 0 00-9.1 5.25l-13-22.57a5.25 5.25 0 119.1-5.25z"
                fill="#ffbb67"
                fill-opacity="0.6"
              />
              <path
                d="M69.2 5.43V31.5a33.1 33.1 0 00-10.5 0V5.42a5.25 5.25 0 1110.5 0z"
                fill="#ffb04d"
                fill-opacity="0.7"
              />
              <path
                d="M97.77 15.9L84.75 38.47a33.1 33.1 0 00-9.1-5.25l13.03-22.57a5.25 5.25 0 119.1 5.25z"
                fill="#ffa535"
                fill-opacity="0.8"
              />
              <path
                d="M117.3 39.26L94.7 52.3a33.1 33.1 0 00-5.25-9.1l22.57-13.03a5.25 5.25 0 015.25 9.1z"
                fill="#ff991b"
                fill-opacity="0.9"
              />
              <animatetransform
                attributeName="transform"
                calcMode="discrete"
                dur="1200ms"
                repeatCount="indefinite"
                type="rotate"
                values="0 64 64;30 64 64;60 64 64;90 64 64;120 64 64;150 64 64;180 64 64;210 64 64;240 64 64;270 64 64;300 64 64;330 64 64"
              />
            </g>
          </svg>
        </span>
        <p
          class="StyledProps--font StyledProps--main StyledProps--font-size-medium StyledProps--font-align-center StyledProps--color StyledProps--color-grey600"
        >
          Loading, please wait...
        </p>
      </div>
    </div>
  </div>
</div>
`;
